fix: styling issue where profile pic covered follow button

--- a/frontend/src/pages/profile/profileTop/profileTop.css
+++ b/frontend/src/pages/profile/profileTop/profileTop.css
@@ -131,7 +131,7 @@
     }
 }
 
-@media all and (min-width: 1025px) {
+@media all and (min-width: 1045px) {
     .profileTop {
         position: relative;
     }
